[package]
name = "pacbot-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["std"]
std = ["core2/std", "serde/std", "rand/std"]
wasm = ["getrandom/js"]

# web:
#[target.'cfg(target_arch = "wasm32")'.features]

[dependencies]
array-init = "2.1.0"
core2 = { version = "0.4.0", default-features = false }
getrandom = "0.2.15"
rand = { version = "0.8.5", default-features = false, features = ["small_rng", "serde1", "getrandom"] }
serde = { version = "1.0.200", default-features = false, features = ["derive"] }
